test/files/neg/t12851b.check
C_2.scala:2: warning: method (method f in trait T2) with a single empty parameter list overrides method without any parameter list
class C extends T1 with T2
      ^
C_2.scala:2: warning: method (method g in trait T2) without a parameter list overrides a method with a single empty one
class C extends T1 with T2
      ^
error: No warnings can be incurred under -Werror.
2 warnings
1 error
